--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -51,8 +51,46 @@ main {
                 border-right: 3px solid $divider-color; 
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px; 
             
-                .message {
-                    
+                .time-s {
+                    text-align: center;
+                    font-size: .6rem;
+                    color: $header-color;
+                }
+
+                .message-me {
+                    width: 100%;
+                    @include flexBox();
+                    justify-content: start;
+                    margin-top: 5px;
+
+                    .message-one {
+                        border-radius: 15px;
+                        width: 70%;
+                        background-color: $header-color;
+                        margin: 5px;
+
+                        p {
+                            margin: 10px;
+                        }
+                    }
+                }
+
+                .message-admin {
+                    width: 100%;
+                    @include flexBox();
+                    justify-content: end;
+                    margin-top: 5px;
+
+                    .message-two {
+                        border-radius: 15px;
+                        width: 70%;
+                        background-color: $divider-color;
+                        margin: 5px;
+
+                        p {
+                            margin: 10px;
+                        }
+                    }
                 }
             }
 
