--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -187,20 +187,28 @@ main {
                 .profile-pic {
                     @include flexBox();
                     justify-content: center;
+                    border-bottom: 2px solid $white-color;
+                    background-color: $header-color;
 
                     img {
                         margin: 10px 0;
+                        border: 5px solid $header-color;
                         border-radius: 50%;
+                        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
                     }
                 }
                 
                 h1 {
                     text-align: center;
                     padding-top: 10px;
+                    font-weight: 700;
+                    color: $white-color;
+                    background-color: $header-color;
                 }
 
                 h3 {
                     margin: 10px 0 0 10px;
+                    font-weight: 600;
                 }
 
                 p {
@@ -217,7 +225,7 @@ main {
                     color: $white-color;
                     background-color: $header-color;
                     border: none;
-                    border-radius: 10px;
+                    border-radius: 5px;
 
                     &:hover {
                         opacity: 80%;
