--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -62,16 +62,15 @@ main {
                     @include flexBox();
                     justify-content: start;
                     margin-top: 5px;
+                    margin-bottom: 5px;
 
                     .message-one {
-                        border-radius: 15px;
+                        border-radius: 5px 5px 5px 0;
                         width: 70%;
                         background-color: $header-color;
-                        margin: 5px;
-
-                        p {
-                            margin: 10px;
-                        }
+                        margin: 0 5px 0 5px;
+                        padding: 0 20px 0 20px;
+                        word-wrap: break-word;
                     }
                 }
 
@@ -80,16 +79,15 @@ main {
                     @include flexBox();
                     justify-content: end;
                     margin-top: 5px;
+                    margin-bottom: 5px;
 
                     .message-two {
-                        border-radius: 15px;
+                        border-radius: 5px 5px 0 5px;
                         width: 70%;
                         background-color: $divider-color;
-                        margin: 5px;
-
-                        p {
-                            margin: 10px;
-                        }
+                        margin: 0 5px 0 5px;
+                        padding: 0 20px 0 20px;
+                        word-wrap: break-word;
                     }
                 }
             }
