--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -71,6 +71,7 @@ main {
                         margin: 0 5px 0 5px;
                         padding: 0 20px 0 20px;
                         word-wrap: break-word;
+                        color: $white-color;
                     }
                 }
 
@@ -88,6 +89,7 @@ main {
                         margin: 0 5px 0 5px;
                         padding: 0 20px 0 20px;
                         word-wrap: break-word;
+                        color: $header-color;
                     }
                 }
             }
