--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -142,6 +142,7 @@ main .container .message-cont .message-box .message-me .message-one {
   margin: 0 5px 0 5px;
   padding: 0 20px 0 20px;
   word-wrap: break-word;
+  color: #ffffff;
 }
 main .container .message-cont .message-box .message-admin {
   width: 100%;
@@ -158,6 +159,7 @@ main .container .message-cont .message-box .message-admin .message-two {
   margin: 0 5px 0 5px;
   padding: 0 20px 0 20px;
   word-wrap: break-word;
+  color: #a8896c;
 }
 main .container .message-cont .message-input {
   margin-bottom: 12px;
