--- a/src/sys-user/signup-page/signup-page.scss
+++ b/src/sys-user/signup-page/signup-page.scss
@@ -9,6 +9,14 @@ main {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1009%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M 0%2c45 C 57.6%2c84.4 172.8%2c247.8 288%2c242 C 403.2%2c236.2 460.8%2c31.8 576%2c16 C 691.2%2c0.2 748.8%2c150.6 864%2c163 C 979.2%2c175.4 1036.8%2c76.8 1152%2c78 C 1267.2%2c79.2 1382.4%2c150.8 1440%2c169L1440 560L0 560z' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c365 C 96%2c383 288%2c456.8 480%2c455 C 672%2c453.2 768%2c352.4 960%2c356 C 1152%2c359.6 1344%2c449.6 1440%2c473L1440 560L0 560z' fill='rgba(219%2c 176%2c 123%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1009'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
     background-attachment: fixed;
     background-size: cover;
+    flex-direction: column;
+
+    .create-message {
+        font-size: 20px;
+        color: $header-color;
+        margin-bottom: 30px;
+        text-align: center;
+    }
 
     #message {
         display:none;
